feate : funding url

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "Demonstrates some of the capabilities of the Obsidian API.",
 	"author": "Beomsu Koh",
 	"authorUrl": "https://beromkoh.medium.com",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"fundingUrl": "buymeacoffee.com/gobeumsu9",
 	"isDesktopOnly": false
 }
